syntax = "proto3";

package engula.fs;

service Fs {
  rpc Open(OpenRequest) returns (OpenResponse) {}

  rpc Read(ReadRequest) returns (ReadResponse) {}

  rpc Write(stream WriteRequest) returns (WriteResponse) {}

  rpc Finish(FinishRequest) returns (FinishResponse) {}

  rpc Remove(RemoveRequest) returns (RemoveResponse) {}
}

enum AccessMode {
  READ = 0;
  WRITE = 1;
}

message OpenRequest {
  string file_name = 1;
  AccessMode access_mode = 2;
}

message OpenResponse { uint64 fd = 1; }

message ReadRequest {
  uint64 fd = 1;
  repeated uint64 offsets = 2;
  repeated uint64 sizes = 3;
}

message ReadResponse { repeated bytes data = 1; }

message WriteRequest {
  uint64 fd = 1;
  bytes data = 2;
}

message WriteResponse {}

message FinishRequest { uint64 fd = 1; }

message FinishResponse {}

message RemoveRequest { string file_name = 1; }

message RemoveResponse {}